<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Spinner
            android:id="@+id/spinnerStackSleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/tvP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="50sp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="100sp"
            android:textSize="30sp"
    />

    <TextView
            android:id="@+id/tvPulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tvP"
            app:layout_constraintTop_toTopOf="@id/tvP"
            android:layout_marginLeft="100sp"
            android:layout_marginStart="100sp"
            android:textSize="30sp"
    />

    <TextView
            android:id="@+id/tvH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hfv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvP"
            android:layout_marginLeft="50sp"
            android:layout_marginStart="50sp"
            android:textSize="30sp"
    />

    <TextView
            android:id="@+id/tvHFV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tvPulse"
            app:layout_constraintTop_toTopOf="@id/tvH"
            android:textSize="30sp"
    />

    <TextView
            android:id="@+id/tvM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movement"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvH"
            android:layout_marginLeft="50sp"
            android:layout_marginStart="50sp"
            android:textSize="30sp"
    />

    <TextView
            android:id="@+id/tvMoving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tvPulse"
            app:layout_constraintTop_toTopOf="@id/tvM"
            android:textSize="30sp"
    />

    <Button
            android:id="@+id/buttonGetUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape3"
            android:text="@string/get_up"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="150sp"
            android:onClick="getUp"
            android:visibility="gone"
    />

    <Button
            android:id="@+id/buttonSleepSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape3"
            android:text="@string/sleep"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="150sp"
            android:onClick="sleep"
    />

</androidx.constraintlayout.widget.ConstraintLayout>