<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Spinner
            android:id="@+id/spinnerStackCards"
            android:layout_width="0dp"
            android:layout_height="@dimen/spinner_height"
            android:textAlignment="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvS"
            app:layout_constraintBottom_toTopOf="@+id/clT"
            app:layout_constraintHorizontal_weight="7"
    />

    <TextView
            android:id="@+id/tvS"
            android:layout_width="0dp"
            android:layout_height="@dimen/spinner_height"
            android:textSize="@dimen/text_view_size"
            android:textColor="@color/black"
            android:text="@string/stapel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/spinnerStackCards"
            app:layout_constraintBottom_toTopOf="@+id/clT"
            app:layout_constraintHorizontal_weight="3"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clT"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvS"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/clB"
            app:layout_constraintVertical_weight="7"
            android:background="@drawable/textviewshape"
    >
        <LinearLayout
                android:id="@+id/llTvHeader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_table_height"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/svT"
                android:orientation="horizontal"
        >
            <TextView
                    android:id="@+id/textViewValue1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/textviewshape"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginRight="-2sp"
                    android:layout_marginEnd="-2sp"
                    android:layout_weight="1"
            />
            <TextView
                    android:id="@+id/textViewValue2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/textviewshape"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="-2sp"
                    android:layout_marginStart="-2sp"
                    android:layout_weight="1"/>

        </LinearLayout>

        <ScrollView
                android:id="@+id/svT"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llTvHeader"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="@dimen/margin_table_scrollview"
                android:layout_marginStart="@dimen/margin_table_scrollview"
                android:layout_marginRight="@dimen/margin_table_scrollview"
                android:layout_marginEnd="@dimen/margin_table_scrollview"
                android:layout_marginBottom="@dimen/margin_table_scrollview"
        >
            <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="3"
    >
        <Button
                android:id="@+id/buttonDeleteCard"
                android:layout_width="@dimen/button_cards_width"
                android:layout_height="@dimen/button_cards_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/button_cards_margin_vertical"
                android:layout_marginLeft="@dimen/button_cards_margin_horizontal"
                android:layout_marginStart="@dimen/button_cards_margin_horizontal"
                android:background="@drawable/buttonshape"
                android:textColor="@color/white"
                android:text="@string/button_karte_loeschen"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="deleteCard"
        />
        <Button
                android:id="@+id/buttonDeleteStack"
                android:layout_width="@dimen/button_cards_width"
                android:layout_height="@dimen/button_cards_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginBottom="@dimen/button_cards_margin_vertical"
                android:layout_marginLeft="@dimen/button_cards_margin_horizontal"
                android:layout_marginStart="@dimen/button_cards_margin_horizontal"
                android:background="@drawable/buttonshape"
                android:textColor="@color/white"
                android:text="@string/button_stapel_loeschen"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="deleteStack"
        />
        <Button
                android:id="@+id/buttonNewCard"
                android:layout_width="@dimen/button_cards_width"
                android:layout_height="@dimen/button_cards_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/button_cards_margin_vertical"
                android:layout_marginRight="@dimen/button_cards_margin_horizontal"
                android:layout_marginEnd="@dimen/button_cards_margin_horizontal"
                android:background="@drawable/buttonshape"
                android:textColor="@color/white"
                android:text="@string/button_neue_kartei"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="newCard"
        />
        <Button
                android:id="@+id/buttonNewStack"
                android:layout_width="@dimen/button_cards_width"
                android:layout_height="@dimen/button_cards_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="@dimen/button_cards_margin_vertical"
                android:layout_marginRight="@dimen/button_cards_margin_horizontal"
                android:layout_marginEnd="@dimen/button_cards_margin_horizontal"
                android:background="@drawable/buttonshape"
                android:textColor="@color/white"
                android:text="@string/button_neuer_stapel"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="newStack"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>